--- a/index.html
+++ b/index.html
@@ -1,56 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </head>
+<style>
+  .backvideo{
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+  }
+  @media (min-aspect-ratio: 16/9){
+    .backvideo{
+      width: auto;
+      height: 100%;
+    }
+  }
+  @media (min-aspect-ratio: 16/9){
+    .backvideo{
+      width: 100%;
+      height: auto;
+    }
+  }
+</style>
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
-              </li>
-            </ul>
-            <span class="navbar-text">
-              Navbar text with an inline element
-            </span>
-          </div>
-        </div>
-      </nav>
-      <div ng-app="">
-        <div class="input-group">
-            <span class="input-group-text">number 1 and number 2</span>
-            <input type="number" class="form-control" ng-model="num1">
-            <input type="number" class="form-control" ng-model="num2"><br>
-        </div>
-        <div>
-            <h2><button ng-click="sum=num1 + num2">+</button></h2>
-            <h3>{{sum}}</h3>
-            <h2><button ng-click="product=num1 * num2">*</button></h2>
-            <h3>{{product}}</h3>
-            <h2><button ng-click="subtraction=num1 - num2">-</button></h2>
-            <h3>{{subtraction}}</h3>
-            <h2><button ng-click="division=num1 / num2">/</button></h2>
-            <h3>{{division}}</h3>
-        </div>
-      </div>
-    
+  <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
+  <a class="navbar-brand" href="https://www.nike.com/in/jordan"><img src="./jordan-air-logo.png" alt="logo" height="100px" width="200px"></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav ms-auto">
+      <li class="nav-item active">
+        <a class="nav-link active" href="https://www.nike.com/in/"><B>Home</B> <span class="sr-only"></span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active" href="#">Link</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="true">
+            Size
+        </a>
+        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <li><a class="dropdown-item" href="#">US 7</a></li>
+            <li><a class="dropdown-item" href="#">US 8</a></li>
+            <li><a class="dropdown-item" href="#">US 9</a></li>
+            <li><a class="dropdown-item" href="#">US 10</a></li>
+            <li><a class="dropdown-item" href="#">US 11</a></li>
+            <li><a class="dropdown-item" href="#">US 12</a></li>
+        </ul>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active" href="#">Disabled</a>
+      </li>
+    </ul>
+   <ul class="ms-auto">
+    <li class="nav-item ms-auto">
+      <a class="btn btn-outline-success my-2 my-sm-0" href="https://www.nike.com/in/membership">JOIN US</a>
+      <a class="btn btn-outline-success my-2 my-sm-0" href="https://accounts.nike.com/lookup?client_id=4fd2d5e7db76e0f85a6bb56721bd51df&redirect_uri=https://www.nike.com/auth/login&response_type=code&scope=openid%20nike.digital%20profile%20email%20phone%20flow%20country&state=cf450425fcc548a0940d731ea1ab243b&code_challenge=TReHkqVOjI08T-gpjlqhujVPYrCHeE97yx2PGEQUQEM&code_challenge_method=S256">SIGN UP</a>
+    </li>
+   </ul>
+  </div>
+</nav>
+  <video autoplay loop plays-inline class="backvideo">
+    <source src="y2mate.com - Nike Jordan 1 Chicago  Cinematic Shoe Commercial  Nepal_1080p.mp4" type="video/mp4">
+  </video>
+  
 </body>
 </html>
